Fixes margin top on small search field.

--- a/app/components/search-field/search-field.scss
+++ b/app/components/search-field/search-field.scss
@@ -38,9 +38,11 @@ input.search-field-input { box-sizing: border-box; }
     }
   }
 
-  &--size-small .search-field-input {
-    height: $search-field-height--small; // Used inside the filter callout.
+  &--size-small {
     margin-top: 0;
+    .search-field-input {
+      height: $search-field-height--small; // Used inside the filter callout
+    }
   }
 
   &-icon {
